# smart_Agri_Node

./: .gitignore  API.md  ARCHITECTURE.md  README.md  SECURITY.md
.github/workflows/: build.yml
common/agri_data_model/: CMakeLists.txt  agri_data_model.c  agri_data_model.h
common/agri_zigbee_clusters/: CMakeLists.txt  agri_zigbee_clusters.c  agri_zigbee_clusters.h
common/crc_utils/: CMakeLists.txt  crc_utils.c  crc_utils.h
docs/: agent_prompt.docx  agent_prompt.txt  agent_prompt_tables.txt  implement_plan.md  tech_spec.docx  tech_spec.txt  tech_spec_tables.txt
field_node/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
field_node/components/sensor_hub/: CMakeLists.txt  sensor_hub.c  sensor_hub.h
field_node/components/sensor_hub/bh1750_driver/: CMakeLists.txt  bh1750_driver.c  bh1750_driver.h
field_node/components/sensor_hub/dht22_driver/: CMakeLists.txt  dht22_driver.c  dht22_driver.h
field_node/components/sensor_hub/npk_rs485_driver/: CMakeLists.txt  npk_rs485_driver.c  npk_rs485_driver.h
field_node/components/sensor_hub/rain_gauge_driver/: CMakeLists.txt  rain_gauge_driver.c  rain_gauge_driver.h
field_node/components/sensor_hub/scd40_driver/: CMakeLists.txt  scd40_driver.c  scd40_driver.h
field_node/components/sensor_hub/sht40_driver/: CMakeLists.txt  sht40_driver.c  sht40_driver.h
field_node/components/sensor_hub/soil_moisture_driver/: CMakeLists.txt  soil_moisture_driver.c  soil_moisture_driver.h
field_node/main/: CMakeLists.txt  main.c
gateway/: CMakeLists.txt
tools/: mqtt_simulator.py  ota_server.py  provision.py
(+44 files in other folders)
